src/scss/components/_rb-tag-multi-select-input.scss
.rb-tag-multi-select-input {
  position: relative;
  border: $input-border-width solid $input-border-color;
  border-radius: $input-border-radius;

  .form-control {
    border: unset;
  }

  .form-control:focus {
    box-shadow: unset;
  }

  .options {
    position: absolute;
    top: $input-height;
  }

  .selected-items {
    padding: 0 5px 2px 5px;
    a {
      max-width: 100%;
      span {
        text-overflow: ellipsis;
        overflow: hidden;
        //max-width: 80%;
        display: inline-block;
      }
    }
  }

  .remove-btn {
    padding: 0;
    border: none;
  }

  .rb-tag {
    vertical-align: middle;
  }

  &.is-invalid {
    border: $input-border-width solid $form-feedback-invalid-color;
  }

  &.is-valid {
    border: $input-border-width solid $form-feedback-valid-color;
  }

  .dropdown-menu {
    width: 100%;

    span {
      display: inline-block;
      text-overflow: ellipsis;
      overflow: hidden;
    }
  }
}

